--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "django_repeat"}]
 python = "^3.11"
 django = "^4.2.4"
 djangorestframework = "^3.14.0"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
